fixes date select wrapping

--- a/app/assets/stylesheets/registration_wizard/professional.scss
+++ b/app/assets/stylesheets/registration_wizard/professional.scss
@@ -55,13 +55,11 @@
 
   .bootstrap-select.date {
     width: 49%;
-    display: inline-block;
+    float: left;
   }
 
-  @media (min-width: $screen-sm) {
-    .date:nth-of-type(odd) {
-      margin-right: 1%;
-    }
+  .date:nth-of-type(odd) {
+    margin-right: 2%;
   }
 
   #candidate_password {
